have added buttons at the bottom of the home page and used mixins to do that. I have also finished the navigation and header

--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
 </head>
 
 <body>
-
-  
-     
+  <div class="startNavigation">
+    <h1>Fun Bus</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
+  </div>
+  <div class="firstImage">
+    <img src="img/fun-bus.jpg" alt="bus">
+    <h3>Welcome To The Fun Bus!</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+    </p>
+  </div>  
   <div class="container home">
    
     <section class="content-section">
